--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Bonface Masira</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -24,8 +26,27 @@
     <div class="contact"></div>
 
     <!-- Footer -->
-    <div class="footer"></div>
-
+    <div class="footer">
+        <div class="content">
+            <div class="description">
+                <p>Designed and developed with love by <b>Bonface Masira</b>. </p>
+            </div>
+            <div class="social_media">
+                <a href="https://www.instagram.com/d_bonniemjr/?hl=en" target="_blank" rel="noopener noreferrer">
+                    <i class="fa fa-instagram"></i>
+                </a>
+                <a href="https://m.facebook.com/boniface.chubs" target="_blank" rel="noopener noreferrer">
+                    <i class="fa fa-facebook"></i>
+                </a>
+                <a href="https://twitter.com/NyachubaB" target="_blank" rel="noopener noreferrer">
+                    <i class="fa fa-twitter"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/bonface-masira-975447a4/" target="_blank" rel="noopener noreferrer">
+                    <i class="fa fa-linkedin"></i>
+                </a>
+            </div>
+        </div>
+    </div>
 
     <script src="./assets/js/script.js"></script>
 </body>
