create the menu

--- a/index.html
+++ b/index.html
@@ -7,11 +7,24 @@
     <title>Portfolio - Bonface Masira</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400&display=swap" rel="stylesheet">
+    <link href='https://css.gg/moon.css' rel='stylesheet'>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <!-- Navigation Bar -->
-    <nav></nav>
+    <nav>
+        <div class="content">
+            <div class="logo"></div>
+            <div class="menu">
+                <h4>PROJECTS</h4>
+                <h4>ABOUT ME</h4>
+                <h4>CONTACT</h4>
+                <div>
+                    <i class="gg-moon"></i>
+                </div>
+            </div>
+        </div>
+    </nav>
 
     <!-- Home Section -->
     <div class="home"></div>
