add logo to the navigation bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="content">
-            <div class="logo"></div>
+            <div class="logo">
+                <div class="image">
+                    <img src="./assets/images/Bonface-logo.png" alt="">
+                </div>
+            </div>
             <div class="menu">
                 <h4>PROJECTS</h4>
                 <h4>ABOUT ME</h4>
