add an about me description

--- a/index.html
+++ b/index.html
@@ -31,13 +31,96 @@
     </nav>
 
     <!-- Home Section -->
-    <div class="home"></div>
+    <div class="home">
+        <div class="content">
+            <div class="left">
+                <div class="name">
+                    <p><b>Hi, I am Bonface Masira.</b> Welcome to my portfolio.</p>
+                    <h1>Designer and Developer</h1>
+                    <p><b>Passionate about technology and it’s possibilities.</b></p>
+                </div>
+                <div class="social_media">
+                    <a href="https://www.instagram.com/d_bonniemjr/?hl=en" target="_blank" rel="noopener noreferrer">
+                        <i class="fa fa-instagram"></i>
+                    </a>
+                    <a href="https://m.facebook.com/boniface.chubs" target="_blank" rel="noopener noreferrer">
+                        <i class="fa fa-facebook"></i>
+                    </a>
+                    <a href="https://twitter.com/NyachubaB" target="_blank" rel="noopener noreferrer">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/bonface-masira-975447a4/" target="_blank" rel="noopener noreferrer">
+                        <i class="fa fa-linkedin"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="right">
+                <div class="image">
+                    <img src="./assets/images/home-potrait.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Projects Section -->
     <div class="projects"></div>
 
     <!-- About Me section -->
-    <div class="about"></div>
+    <div class="about">
+        <div class="content">
+            <div class="title">
+                <h1>about me</h1>
+                <div><p>Little facts about myself. </p></div>
+            </div>
+            <section>
+                <div class="left">
+                    <div class="description">
+                        <div class="para1">
+                            <p>
+                                Hello. My name is <b>Bonface Masira</b>, and I’m from Kenya. I have a 
+                                Bachelor degree in Computer Technology from the Technical 
+                                University of Kenya. Always have been in love with technology 
+                                and it's all possibilities.
+                                I've always had a fascination with the arts, and I've always
+                                 wanted to know how things worked, how everything I saw on the 
+                                 internet, on TV and in publications was made. That's how I came
+                                  to appreciate design.
+                                With the introduction of new technology, my interest in the 
+                                web world grew with time.
+                            </p>
+                        </div>
+                        <div class="para2">
+                            <p>
+                                Currently, I'm seeking for a career transition. Despite the fact that
+                                 I graduated with a degree in software development, I chose to continue my 
+                                 professional career as a Creative Designer, working in domains such as marketing, 
+                                 user interface and user experience. Now that I'm back in the development world, 
+                                 I see no better way to do it than to apply the skills I've gained in the field with 
+                                 which I'm most familiar, <b>Frontend Web Development</b>.
+                            </p>
+                        </div>
+                        <div class="para3">
+                            <p>
+                                I am a dedicated individual who is intrigued and eager to constantly provide my best 
+                                effort to whatever task is assigned to me. If there's something I don't know, I'll 
+                                figure out how to learn it.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="tools">
+                        <div class="title">
+                            <h4>Tools and technologies that I use</h4>
+                        </div>
+                        <div class="list">
+                            <div class="design"></div>
+                            <div class="development"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right"></div>
+            </section>
+        </div>
+    </div>
 
     <!-- Contact Me -->
     <div class="contact"></div>
