--- a/index.html
+++ b/index.html
@@ -112,8 +112,48 @@
                             <h4>Tools and technologies that I use</h4>
                         </div>
                         <div class="list">
-                            <div class="design"></div>
-                            <div class="development"></div>
+                            <div class="design">
+                                <h5>Creatuve Design</h5>
+                                <ul>
+                                    <li>Figma</li>
+                                    <li>Adobe Photoshop</li>
+                                    <li>Adobe Illustrator</li>
+                                    <li>Adobe Indesign</li>
+                                    <li>Adobe After Effects</li>
+                                    <li>Sony Vegas</li>
+                                </ul>
+                            </div>
+                            <div class="development">
+                                <div class="title">
+                                    <h5>Development</h5>
+                                </div>
+                                <div class="lists">
+                                    <ul>
+                                        <li>HTML</li>
+                                        <li>CSS3</li>
+                                        <li>JavaScript</li>
+                                        <li>TypeScript</li>
+                                        <li>ReactJs</li>
+                                        <li>NextJs</li>
+                                    </ul>
+                                    <ul>
+                                        <li>NodeJs</li>
+                                        <li>Git</li>
+                                        <li>GitHub</li>
+                                        <li>MongoDB</li>
+                                        <li>Firebase</li>
+                                        <li>NPM</li>
+                                    </ul>
+                                    <ul>
+                                        <li>TDD</li>
+                                        <li>Clean Code</li>
+                                        <li>SASS</li>
+                                        <li>Styled Components</li>
+                                        <li>Lottie</li>
+                                        <li>SCRUM</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
