add profile image and quote in about section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portfolio - Bonface Masira</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Grape+Nuts&display=swap" rel="stylesheet">
     <link href='https://css.gg/moon.css' rel='stylesheet'>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -157,7 +158,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="right"></div>
+                <div class="right">
+                    <div class="items">
+                        <div class="image">
+                            <img src="./assets/images/Bonface.jpg" alt="Bonface Masira">
+                        </div>
+                        <div class="quote">
+                            <p>
+                                "The two most important days in your life are the day you are 
+                                born and the day you find out why."
+                            </p>
+                        </div>
+                        <div class="source">
+                            <p>– Mark Twain</p>
+                        </div>
+                    </div>
+                </div>
             </section>
         </div>
     </div>
