create a contact form

--- a/index.html
+++ b/index.html
@@ -179,7 +179,40 @@
     </div>
 
     <!-- Contact Me -->
-    <div class="contact"></div>
+    <div class="contact">
+        <div class="content">
+            <div class="title">
+                <h1>contact</h1>
+                <p>
+                    If you want to say anything to me, feel free to contact me on the form below.
+                </p>
+            </div>
+            <section>
+                <div class="left">
+                    <form action="">
+                        <label for="name">Name</label>
+                        <input type="text" class="name" placeholder="Your Name">
+
+                        <label for="name">Email</label>
+                        <input type="text" class="email" placeholder="Your Name">
+
+                        <label for="name">Subject</label>
+                        <input type="text" class="subject" placeholder="Subject">
+
+                        <label for="name">Message</label>
+                        <input type="text" class="message" style="height:12rem" placeholder="Write something...">
+
+                        <input type="submit" value="Send Message">
+                    </form>
+                </div>
+                <div class="right">
+                    <div class="image">
+                        <img src="" alt="contact-picture">
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
 
     <!-- Footer -->
     <div class="footer">
