add contact form image

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 </div>
                 <div class="right">
                     <div class="image">
-                        <img src="" alt="contact-picture">
+                        <img src="./assets/images/contact-image.png" alt="contact-picture">
                     </div>
                 </div>
             </section>
