add a README description

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="right">
                 <div class="image">
-                    <img src="./assets/images/home-potrait.png" alt="">
+                    <img src="./assets/images/home-img.png" alt="">
                 </div>
             </div>
         </div>
@@ -194,7 +194,7 @@
                         <input type="text" class="name" placeholder="Your Name">
 
                         <label for="name">Email</label>
-                        <input type="text" class="email" placeholder="Your Name">
+                        <input type="text" class="email" placeholder="example@gmail.com">
 
                         <label for="name">Subject</label>
                         <input type="text" class="subject" placeholder="Subject">
