add projects, descriptions and links to the projects

--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
         <div class="content">
             <div class="logo">
                 <div class="image">
-                    <img src="./assets/images/Bonface-logo.png" alt="">
+                    <img src="./assets/images/Bonface-logo.png" alt="Bonface-logo">
                 </div>
             </div>
             <div class="menu">
-                <h4>PROJECTS</h4>
-                <h4>ABOUT ME</h4>
-                <h4>CONTACT</h4>
+                <a href="#projects">
+                    <h4>PROJECTS</h4>
+                </a>
+                <a href="#about">
+                    <h4>ABOUT ME</h4>
+                </a>
+                <a href="#contact">
+                    <h4>CONTACT</h4>
+                </a>
                 <div>
                     <i class="gg-moon"></i>
                 </div>
@@ -64,10 +70,85 @@
     </div>
 
     <!-- Projects Section -->
-    <div class="projects"></div>
+    <div id="projects">
+        <div class="content">
+            <div class="title">
+                <h1>my projects</h1>
+                <p>A collction of my recent works.</p>
+            </div>
+            <div class="section">
+                <div class="project">
+                    <figure>
+                        <div>
+                            <img src="./assets/images/MovieHub.png" alt="MovieHub">
+                        </div>
+                        <figcaption>
+                            <h3>MovieHub</h3>
+                            <p>A movie web application that allows users to view movies, check rating, overview,
+                                search movies and sort in different orders
+                            </p>
+                        </figcaption>
+                        <div class="buttons">
+                            <a href="https://bonfacemasira.github.io/MovieHub/" target="_blank" class="button">See it live!</a>
+                            <a href="https://github.com/bonfacemasira/MovieHub" target="_blank" class="button">GitHub Repo</a>
+                        </div>
+                    </figure>
+                </div>
+                <div class="project">
+                    <figure>
+                        <div>
+                            <img src="./assets/images/Events-Hub.png" alt="Events-Hub.">
+                        </div>
+                        <figcaption>
+                            <h3>Events-Hub</h3>
+                            <p>An events website that allows clients to view different events and be able to book them.
+                            </p>
+                        </figcaption>
+                        <div class="buttons">
+                            <a href="http://ebenezr.github.io/Events-Hub" target="_blank" class="button">See it live!</a>
+                            <a href="http://github.com/Ebenezr/Events-Hub" target="_blank" class="button">GitHub Repo</a>
+                        </div>
+                    </figure>
+                </div>
+                <div class="project">
+                    <figure>
+                        <div>
+                            <img src="./assets/images/Quiz-Board.png" alt="Quiz-Board">
+                        </div>
+                        <figcaption>
+                            <h3>Quiz-Board</h3>
+                            <p>Quiz Board for Javascript Test
+                            </p>
+                        </figcaption>
+                        <div class="buttons">
+                            <a href="https://bonfacemasira.github.io/Quiz-Board/" target="_blank" class="button">See it live!</a>
+                            <a href="https://github.com/bonfacemasira/Quiz-Board" target="_blank" class="button">GitHub Repo</a>
+                        </div>
+                    </figure>
+                </div>
+                <div class="project">
+                    <figure>
+                        <div>
+                            <img src="./assets/images/Quick-Movers.png" alt="Quick-Movers">
+                        </div>
+                        <figcaption>
+                            <h3>Quick-Movers</h3>
+                            <p>
+                                This is the Quick Movers Website Page
+                            </p>
+                        </figcaption>
+                        <div class="buttons">
+                            <a href="https://bonfacemasira.github.io/Quick-Movers-Website/" target="_blank" class="button">See it live!</a>
+                            <a href="https://github.com/bonfacemasira/Quick-Movers-Website" target="_blank" class="button">GitHub Repo</a>
+                        </div>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- About Me section -->
-    <div class="about">
+    <div id="about">
         <div class="content">
             <div class="title">
                 <h1>about me</h1>
@@ -179,7 +260,7 @@
     </div>
 
     <!-- Contact Me -->
-    <div class="contact">
+    <div id="contact">
         <div class="content">
             <div class="title">
                 <h1>contact</h1>
