add emoji in footer

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
     <div class="footer">
         <div class="content">
             <div class="description">
-                <p>Designed and developed with love by <b>Bonface Masira</b>. </p>
+                <p>Designed and developed with &#10084;&#65039; by <strong>Bonface Masira</strong></p>
             </div>
             <div class="social_media">
                 <a href="https://www.instagram.com/d_bonniemjr/?hl=en" target="_blank" rel="noopener noreferrer">
